0.24.6	2025-10-17

 * Add support for ``git show-branch`` command to display branches and their
   commits. Supports filtering by local/remote branches, topological ordering,
   list mode, independent branch detection, and merge base calculation.
   (Jelmer Vernooĳ, #1829)

0.24.5	2025-10-15

 * Add support for ``git show-ref`` command to list references in a local
   repository. Supports filtering by branches/tags, pattern matching,
   dereferencing tags, verification mode, and existence checking. Available
   as ``porcelain.show_ref()`` and ``dulwich show-ref`` CLI command.
   (Jelmer Vernooĳ, #1830)

 * Fix HTTP authentication to preserve credentials from URLs when storing
   remote configuration. URLs with embedded credentials (like
   ``https://token@github.com/user/repo.git``) now correctly save those
   credentials to git config, allowing subsequent push operations to succeed.
   (Jelmer Vernooĳ, #1925)

 * Restore ``pool_manager`` parameter to ``get_transport_and_path`` and
   ``get_transport_and_path_from_url`` functions that was accidentally removed
   during type annotation refactoring. (Jelmer Vernooĳ, #1928)

0.24.4	2025-10-14

 * Add compatibility for Python 3.14.  (Jelmer Vernooĳ)

 * Re-enable android build. (Malcolm Smith)

0.24.3	2025-10-12

 * Add ``dulwich merge-base`` command. (Jelmer Vernooĳ, #1831)

 * Add support for ``git mailsplit`` command to split mbox files and Maildir
   into individual message files. Supports mboxrd format, custom precision,
   and all standard git mailsplit options. (Jelmer Vernooĳ, #1840)

 * Add support for ``git var`` command to display Git's logical variables
   (GIT_AUTHOR_IDENT, GIT_COMMITTER_IDENT, GIT_EDITOR, GIT_SEQUENCE_EDITOR,
   GIT_PAGER, GIT_DEFAULT_BRANCH). Available as ``porcelain.var()`` and
   ``dulwich var`` CLI command. (Jelmer Vernooĳ, #1841)

 * Add support for ``GIT_TRACE`` environment variable for debugging. Supports
   output to stderr (values "1", "2", or "true"), file descriptors (3-9),